--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -83,5 +83,5 @@
 /* ************************** */
 .nav-pills .nav-link.active,
 .show>.nav-pills .nav-link{
-    background: #022040 !important    
+    background: #022040 !important;  
 }
