--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -86,8 +86,10 @@
     background: #022040 !important;  
 }
 
-
-.card-icon:hover{
-    transform:translate(-50%, -50%);
-    transition: all 0.3s ease-in-out;
+.car_trasit{
+   transition: all 0.3s ease-in-out; 
+}
+.car_trasit:hover{
+  transform: translateY(-8%);
+  /* box-shadow: 1px 13px 34px 0px rgba(0,78,191,0.31); */
 }
